task overlay fixes
* Fixed scrollbar overlapping with overlay toggle button
* Fixed tab elements moving when attempting to click the close button

--- a/css/taskOverlay.css
+++ b/css/taskOverlay.css
@@ -1,21 +1,18 @@
-.navbar {
-	position: fixed;
-	top: 0;
-	left: 0;
+.simulated-navbar {
 	width: 100%;
 	height: 36px;
 	background-color: inherit;
 	z-index: 1;
 	border-bottom: 1px rgba(0, 0, 0, 0.1) solid;
 }
-body.windows:not(.maximized) .navbar {
+body.windows:not(.maximized) .simulated-navbar {
 	height: 46px;
 }
 #switch-task-button {
 	position: absolute;
 	top: 0;
 	right: 0;
-	z-index: 2;
+	z-index: 4;
 }
 body.windows #switch-task-button {
 	right: 138px;
@@ -27,13 +24,14 @@ body.windows:not(.maximized) #switch-task-button {
 	color: royalblue !important;
 }
 #task-overlay {
+	display: flex;
+	flex-direction: column;
 	position: fixed;
 	top: 0;
 	left: 0;
 	width: 100%;
 	height: 100%;
 	background-color: #fff;
-	padding: 40px 0 5em 0;
 	white-space: nowrap;
 	overflow: auto;
 	opacity: 1;
@@ -41,8 +39,10 @@ body.windows:not(.maximized) #switch-task-button {
 	transition: 0.15s all;
 	z-index: 3;
 }
-body.windows:not(.maximized) #task-overlay {
-	padding-top: 50px;
+#task-area {
+	flex: 1;
+	overflow: auto;
+	padding-bottom: 5em;
 }
 #task-overlay[hidden] {
 	display: block !important;
